@@ -13,21 +13,30 @@ import javafx.geometry.Pos;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
+import javafx.scene.effect.DropShadow;
 import javafx.scene.image.*;
 import javafx.scene.input.Clipboard;
 import javafx.scene.input.ClipboardContent;
+import javafx.scene.input.MouseButton;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.*;
+import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
 import javafx.stage.FileChooser;
+import javafx.stage.Popup;
 import javafx.stage.Stage;
+import javafx.stage.Window;
 import javafx.util.Duration;
+import javafx.scene.Node;
 import org.springframework.ai.chat.client.ChatClient;
 
 import org.springframework.stereotype.Controller;
 import program.chatus.Model.ChatMessage;
 import program.chatus.Model.UserSession;
 import program.chatus.Util.ContextUtil;
+import program.chatus.Model.MessageDTO;
+import program.chatus.Model.User;
+import program.chatus.Util.DatabaseConnection;
 
 
 import java.io.*;
@@ -37,6 +46,9 @@ import java.sql.*;
 import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.Base64;
+import java.nio.file.Files;
+import java.time.LocalDateTime;
 
 /**
  * ChatController is the JavaFX client. It connects to the server,
@@ -45,7 +57,6 @@ import java.util.concurrent.Executors;
  */
 @Controller
 public class ChatController extends Application implements Initializable {
-
     @FXML private TextField chat_Search;
     @FXML private Button chat_call;
     @FXML private ImageView chat_mic;
@@ -76,16 +87,64 @@ public class ChatController extends Application implements Initializable {
 
 
 
+    //card user
+    @FXML
+    private HBox HboxCardUser;
+    //and iside it
+    @FXML
+    private ImageView imgporfile1;
+    // inside  card user Hbox also
+    @FXML
+    private VBox Vbox_cardUser_User_lastmessage;
+    //inside
+    @FXML
+    private Label LabelUsername;
+    @FXML
+    private Label LabelLastMessage;
+    //inside Hbox card user
+    @FXML
+    private VBox Vbox_CardUser_lastmessagetime;
+    @FXML
+    private Label Labellastmessagetime;
+
+//    private Client client;
+
+//    int userId = Integer.parseInt(JWTDocoder.extractuserId(Tokens.getToken())); // assume extractuserId returns int now
+    // vairble username
+    @FXML
+    private Label UsernameInsetting2;
+    @FXML
+    private Label usernameinsetting;
+
+
+
+
+    // varible group create
+    @FXML
+    private Button ButtonCancelGroup;
+    @FXML
+    private Button ButtonCreateGroup;
+    @FXML
+    private TextField TextFeildGroup;
+
+    @FXML
+    private Button microBtn;
+
+
+
+
+
 
 
 
     // Server connection variables
     private Socket socket;
-    private BufferedReader in;
-    private PrintWriter out;
+    private DataInputStream dataIn;
+    private DataOutputStream dataOut;
     private static final String SERVER_ADDRESS = "localhost";
     private static final int PORT = 1234;
     private static ExecutorService threadPool = Executors.newFixedThreadPool(10);  // Adjust as needed
+    private final Map<String, CardUser> userControllerMap = new HashMap<>();
 
     // The current conversation recipient
     private String currentRecipient = null;
@@ -94,7 +153,11 @@ public class ChatController extends Application implements Initializable {
 
     int as = 100;
 
-
+    // Add new fields for message handling
+    private MessageContextMenuController messageContextMenu;
+    private CardUser currentCardUser;
+    private String selectedMessageId;
+    static String delimiter = "<::>";
     @FXML
     private  void StartChatAi(){
 
@@ -115,25 +178,35 @@ public class ChatController extends Application implements Initializable {
 
 
     private void sendPhoto(File photoFile) {
-        try (FileInputStream fileInputStream = new FileInputStream(photoFile)) {
-            // Read the file into a byte array
-            byte[] fileBytes = fileInputStream.readAllBytes();
+        try {
+            byte[] imageBytes = Files.readAllBytes(photoFile.toPath());
+            String ImageName=photoFile.getName();
+            System.out.println(ImageName);
 
-            // Send a header to indicate this is a photo
-            String header = "PHOTO:" + photoFile.getName() + ":" + fileBytes.length + "\n";
-            out.println(header);
-
-            // Send the file bytes
-            OutputStream outputStream = socket.getOutputStream();
-            outputStream.write(fileBytes);
-            outputStream.flush();
-
+            dataOut.writeUTF("IMAGE");
+            dataOut.writeUTF(username);
+            dataOut.writeUTF(currentRecipient);
+            dataOut.writeInt(imageBytes.length);
+            dataOut.writeUTF(ImageName);
+            dataOut.write(imageBytes);
+            dataOut.flush();
+                         
             System.out.println("Photo sent: " + photoFile.getName());
+            Image image = new Image(photoFile.toURI().toString());
+            AddMessageImage(photoFile,"right",currentRecipient);
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
-
+    private void  AddMessageImage(File photo, String alignment, String SelectUserFriend) {
+        Platform.runLater(() -> {
+            CardUser cardUser = userControllerMap.get(SelectUserFriend);
+            MessageImageController imageController = MessageImageController.create(photo, alignment, SelectUserFriend, cardUser);
+            if (imageController != null) {
+                vboxChat.getChildren().add(imageController.getRoot());
+            }
+        });
+    }
 
 
 
@@ -210,13 +283,17 @@ public class ChatController extends Application implements Initializable {
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-        // On clicking "Send" button
+        // Existing initialization code
         Sendbtn.setOnAction(e -> sendMessage());
-
-        // Optionally, watch search text changes
         chat_Search.textProperty().addListener((obs, oldVal, newVal) -> {
-            // Filter or update friend list if needed
+            filterFriendList(newVal);
         });
+
+        // Initialize message context menu
+        messageContextMenu = MessageContextMenuController.create();
+
+        // Load friend list from database
+        loadFriendList();
 
         // Connect to server on a background thread
         threadPool.execute(this::connectToServer);
@@ -224,133 +301,329 @@ public class ChatController extends Application implements Initializable {
 
     @FXML private ScrollPane chatScrollPane;
 
-    private void addMessage(String message, boolean isUserMessage) {
-        // Create a label for the message
-        Label messageLabel = new Label(message);
-        messageLabel.setWrapText(true); // Enable text wrapping
-        messageLabel.setMaxWidth(300); // Set a max width for the message bubble
-        messageLabel.setPadding(new Insets(10)); // Add padding
-        messageLabel.setStyle(
-                "-fx-background-color: " + (isUserMessage ? "#0078d7" : "#e1e1e1") + ";" + // Different colors for user and AI messages
-                        "-fx-background-radius: 10;" + // Rounded corners
-                        "-fx-text-fill: " + (isUserMessage ? "white" : "black") + ";" // Text color
-        );
-
-        // Create an HBox to hold the message label
-        HBox messageContainer = new HBox();
-        messageContainer.setPadding(new Insets(5)); // Add padding around the message
-        messageContainer.setAlignment(isUserMessage ? Pos.CENTER_RIGHT : Pos.CENTER_LEFT); // Align the HBox
-
-        // Add the label to the HBox
-        messageContainer.getChildren().add(messageLabel);
-
-        // Add the HBox to the chat container
-        chatMessageContainer.getChildren().add(messageContainer);
-
-        // Scroll to the bottom of the chat
-
-    }
-
-
-
-
-
-    private StringBuilder aiResponse; // Stores the AI's response
-    private Label aiMessageLabel; // Label for the AI's message
-    @FXML
-    public void sendMessageAi() {
-        var llmInput = chat_text_send1.getText();
-        if (llmInput == null || llmInput.isEmpty()) {
+    private void filterFriendList(String searchText) {
+        if (searchText == null || searchText.isEmpty()) {
+            // Show all friends
             return;
         }
-
-        // Add the user's message to the chat immediately
-        addMessage(llmInput, true); // true = user message
-
-        chat_text_send1.setText(""); // Clear the input field
-
-        // Create and show progress indicator
-        ProgressIndicator progressIndicator = new ProgressIndicator();
-        progressIndicator.setProgress(ProgressIndicator.INDETERMINATE_PROGRESS);
-        progressIndicator.setMaxSize(50, 50);
-
-        // Create a transparent overlay to cover the entire screen
-        StackPane overlay = new StackPane(progressIndicator);
-        overlay.setStyle("-fx-background-color: rgba(0, 0, 0, 0.1);"); // Transparent background (no blur)
-        overlay.setAlignment(Pos.CENTER); // Center the progress indicator
-
-        // Add the overlay to the root container (e.g., StackPane or BorderPane)
-        StackPane rootContainer = (StackPane) chatMessageContainer.getScene().getRoot(); // Assuming the root is a StackPane
-        rootContainer.getChildren().add(overlay);
-
-        // Create a label for the AI's response
-        Label aiMessageLabel = new Label();
-        aiMessageLabel.setWrapText(true); // Enable text wrapping
-        aiMessageLabel.setOnMouseClicked(new EventHandler<MouseEvent>() {
-            @Override
-            public void handle(MouseEvent event) {
-                ClipboardContent clipboardContent = new ClipboardContent();
-                clipboardContent.putString(aiMessageLabel.getText());
-                Clipboard clipboard = Clipboard.getSystemClipboard();
-                clipboard.setContent(clipboardContent);
-
-                chat_text_send1.setText( clipboard.getString());
-
-
+        
+        // Filter friends based on search text
+        for (javafx.scene.Node node : VboxLeftSide.getChildren()) {
+            if (node instanceof HBox) {
+                HBox userBox = (HBox) node;
+                Label usernameLabel = (Label) ((VBox) userBox.getChildren().get(1)).getChildren().get(0);
+                boolean matches = usernameLabel.getText().toLowerCase().contains(searchText.toLowerCase());
+                userBox.setVisible(matches);
             }
-        }); // Set a max width for the message bubble
-        aiMessageLabel.setPadding(new Insets(10)); // Add padding
-        aiMessageLabel.setStyle(
-                "-fx-background-color: #e1e1e1;" + // AI message color
-                        "-fx-background-radius: 10;" + // Rounded corners
-                        "-fx-text-fill: black;" // Text color
-        );
+        }
+    }
 
-        // Create an HBox to hold the AI's message label
-        HBox aiMessageContainer = new HBox();
-        aiMessageContainer.setPadding(new Insets(5)); // Add padding around the message
-        aiMessageContainer.setAlignment(Pos.CENTER_LEFT); // Align the HBox to the left
+    private void addMessage(String message, boolean isUserMessage) {
+        Platform.runLater(() -> {
+            HBox messageContainer = new HBox();
+            messageContainer.setPadding(new Insets(5));
+            messageContainer.setAlignment(isUserMessage ? Pos.CENTER_RIGHT : Pos.CENTER_LEFT);
 
-        // Add the label to the HBox
-        aiMessageContainer.getChildren().add(aiMessageLabel);
+            Label messageLabel = new Label(message);
+            messageLabel.setFont(Font.font("System Bold", 16));
+            messageLabel.setPrefHeight(44);
+            messageLabel.setMaxWidth(338);
+            messageLabel.setWrapText(true);
+            messageLabel.setPadding(new Insets(10));
 
-        // Add the HBox to the chat container
-        chatMessageContainer.getChildren().add(aiMessageContainer);
-
-        // Scroll to the bottom of the chat
-
-
-        // Start the AI response process
-        var chatClient = ContextUtil.getContext().getBean(ChatClient.class);
-        var llrespons = chatClient.prompt().user(llmInput).stream()
-                .content()
-                .subscribe(
-                        token -> Platform.runLater(() -> {
-                            if (rootContainer.getChildren().contains(overlay)) {
-                                rootContainer.getChildren().remove(overlay);
-                            }
-                            // Append the token to the AI's response
-                            aiMessageLabel.setText(aiMessageLabel.getText() + token);
-
-                            // Scroll to the bottom of the chat
-
-                        }),
-                        error -> Platform.runLater(() -> {
-                            // Handle errors
-                            addMessage("Error: " + error.getMessage(), false); // false = AI message
-
-                            // Remove the progress indicator on error
-                            if (rootContainer.getChildren().contains(overlay)) {
-                                rootContainer.getChildren().remove(overlay);
-                            }
-                        }),
-                        () -> Platform.runLater(() -> {
-                            // Remove the progress indicator when done
-                            if (rootContainer.getChildren().contains(overlay)) {
-                                rootContainer.getChildren().remove(overlay);
-                            }
-                        })
+            // Add context menu
+            messageLabel.setOnContextMenuRequested(e -> {
+                MessageDTO messageDTO = new MessageDTO();
+                messageDTO.setContent(message);
+                messageDTO.setSender(isUserMessage ? username : currentRecipient);
+                messageDTO.setReceiver(isUserMessage ? currentRecipient : username);
+                messageDTO.setTimestamp(LocalDateTime.now().toString());
+                messageDTO.setStatus("delivered");
+                
+                messageContextMenu.show(
+                    messageLabel.getScene().getWindow(),
+                    e.getScreenX(),
+                    e.getScreenY(),
+                    messageDTO,
+                    () -> handleReply(message),
+                    () -> handleForward(message),
+                    () -> handleDelete(message)
                 );
+            });
+
+            if (isUserMessage) {
+                messageLabel.setStyle("-fx-background-color: #131313; -fx-background-radius: 50; -fx-text-fill: white;");
+                VBox.setMargin(messageLabel, new Insets(10, 10, 10, 250));
+            } else {
+                messageLabel.setStyle("-fx-background-color: #2bc723; -fx-background-radius: 50; -fx-text-fill: white;");
+                VBox.setMargin(messageLabel, new Insets(10, 250, 10, 10));
+            }
+
+            messageContainer.getChildren().add(messageLabel);
+            vboxChat.getChildren().add(messageContainer);
+
+            // Scroll to bottom after adding message
+            scrollToBottom();
+        });
+    }
+
+    private void scrollToBottom() {
+        Platform.runLater(() -> {
+            if (vboxChat.getChildren().size() > 0) {
+                vboxChat.requestLayout();
+                vboxChat.layout();
+                
+                // Find the ScrollPane parent
+                Node parent = vboxChat.getParent();
+                while (parent != null && !(parent instanceof ScrollPane)) {
+                    parent = parent.getParent();
+                }
+                
+                if (parent instanceof ScrollPane) {
+                    ScrollPane scrollPane = (ScrollPane) parent;
+                    scrollPane.setVvalue(1.0);
+                }
+            }
+        });
+    }
+
+    private void handleReply(String message) {
+        chat_text_send.setText("Reply to: " + message);
+        chat_text_send.requestFocus();
+    }
+
+    private void handleForward(String message) {
+        // Show user selection dialog for forwarding
+        showForwardDialog(message);
+    }
+
+    private void handleDelete(String message) {
+        // Show delete confirmation dialog
+        showDeleteConfirmation(() -> {
+            // Delete message from database and UI
+            deleteMessage(message);
+        });
+    }
+
+    private void showDeleteConfirmation(Runnable onConfirm) {
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("ADeleteConfirmation.fxml"));
+            Parent root = loader.load();
+            
+            DeleteConfirmationController controller = loader.getController();
+            controller.setOnConfirmAction(onConfirm);
+            
+            Stage dialogStage = new Stage();
+            controller.setDialogStage(dialogStage);
+            
+            Scene scene = new Scene(root);
+            dialogStage.setScene(scene);
+            dialogStage.show();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void showForwardDialog(String message) {
+        // Create a dialog to select recipient
+        Dialog<String> dialog = new Dialog<>();
+        dialog.setTitle("Forward Message");
+        dialog.setHeaderText("Select recipient");
+
+        // Create the custom dialog content
+        VBox content = new VBox(10);
+        content.setPadding(new Insets(10));
+
+        // Add user list
+        ScrollPane scrollPane = new ScrollPane();
+        VBox userList = new VBox(5);
+        
+        // Populate user list
+        for (javafx.scene.Node node : VboxLeftSide.getChildren()) {
+            if (node instanceof HBox) {
+                HBox userBox = (HBox) node;
+                Label usernameLabel = (Label) ((VBox) userBox.getChildren().get(1)).getChildren().get(0);
+                
+                Button userButton = new Button(usernameLabel.getText());
+                userButton.setMaxWidth(Double.MAX_VALUE);
+                userButton.setOnAction(e -> {
+                    dialog.setResult(usernameLabel.getText());
+                    dialog.close();
+                });
+                
+                userList.getChildren().add(userButton);
+            }
+        }
+        
+        scrollPane.setContent(userList);
+        content.getChildren().add(scrollPane);
+
+        dialog.getDialogPane().setContent(content);
+        dialog.getDialogPane().getButtonTypes().add(ButtonType.CANCEL);
+
+        // Show dialog and handle result
+        dialog.showAndWait().ifPresent(recipient -> {
+            if (recipient != null) {
+                forwardMessage(message, recipient);
+            }
+        });
+    }
+
+    private void forwardMessage(String message, String recipient) {
+        // Send the message to the new recipient
+        try {
+            byte[] msgBytes = message.getBytes("UTF-8");
+            
+            dataOut.writeUTF("TEXT");
+            dataOut.writeUTF(username);
+            dataOut.writeUTF(recipient);
+            dataOut.writeInt(msgBytes.length);
+            dataOut.write(msgBytes);
+            dataOut.flush();
+            
+        addMessage("Forwarded to " + recipient + ": " + message, true);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void deleteMessage(String message) {
+        // Remove from UI
+        for (javafx.scene.Node node : vboxChat.getChildren()) {
+            if (node instanceof HBox) {
+                HBox messageBox = (HBox) node;
+                Label messageLabel = (Label) messageBox.getChildren().get(0);
+                if (messageLabel.getText().equals(message)) {
+                    vboxChat.getChildren().remove(messageBox);
+                    break;
+                }
+            }
+        }
+        
+        // Delete from database
+        try (Connection conn = DatabaseConnection.getConnection()) {
+            String sql = "DELETE FROM messages WHERE content = ? AND (sender_id = ? OR receiver_id = ?)";
+            PreparedStatement stmt = conn.prepareStatement(sql);
+            stmt.setString(1, message);
+            stmt.setInt(2, getUserIdByUsername(username, conn));
+            stmt.setInt(3, getUserIdByUsername(username, conn));
+            stmt.executeUpdate();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void handleIncomingPhoto(String sender, String fileName, int FileSize) {
+        try {
+            byte[] photoData = new byte[FileSize];
+            InputStream inputStream=socket.getInputStream();
+
+            System.out.println("we are in handling photos"+FileSize);
+//                byte[] photoData = java.util.Base64.getDecoder().decode(base64Photo);
+
+            int readbyte=0;
+            while(readbyte<FileSize){
+                int read=inputStream.read(photoData,readbyte,FileSize-readbyte);
+                if(read==-1)break;
+                readbyte+=read;
+            }
+            Image image = new Image(new ByteArrayInputStream(photoData));
+            
+            // Create temporary file for the photo
+            File tempFile = File.createTempFile("photo_", fileName);
+            Files.write(tempFile.toPath(), photoData);
+            
+            Platform.runLater(() -> {
+                MessageImageController imageController = MessageImageController.create(
+                    tempFile,
+                    "left",
+                    sender,
+                    currentCardUser
+                );
+                if (imageController != null) {
+                    vboxChat.getChildren().add(imageController.getRoot());
+                }
+                
+                // Create and store photo message
+                ChatMessage photoMessage = new ChatMessage(
+                    sender,
+                    username,
+                    "Photo: " + fileName,
+                        "PHOTO:" + sender + ":" + fileName + ":" + photoData,
+                    LocalDateTime.now(),
+                    "delivered"
+                );
+                
+                try (Connection conn = DatabaseConnection.getConnection()) {
+                    String sql = "INSERT INTO messages (sender_id, receiver_id, content, message, timestamp, status) VALUES (?, ?, ?, ?, ?, ?)";
+                    PreparedStatement stmt = conn.prepareStatement(sql);
+                    stmt.setInt(1, getUserIdByUsername(sender, conn));
+                    stmt.setInt(2, getUserIdByUsername(username, conn));
+                    stmt.setString(3, photoMessage.getContent());
+                    stmt.setString(4, photoMessage.getMessage());
+                    stmt.setObject(5, photoMessage.getTimestamp());
+                    stmt.setString(6, "delivered");
+                    stmt.executeUpdate();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            });
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void loadChatMessages(String friendUsername) {
+        currentRecipient = friendUsername;
+        Platform.runLater(() -> {
+            vboxChat.getChildren().clear();
+            List<ChatMessage> messages;
+            try {
+                messages = getMessagesForUser(friendUsername);
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            }
+            if (messages == null || messages.isEmpty()) {
+                System.out.println("No messages found for: " + friendUsername);
+                return;
+            }
+
+            for (ChatMessage chatMessage : messages) {
+                String content = chatMessage.getContent();
+                if (content != null && content.startsWith("PHOTO"+delimiter)) {
+                    // Handle photo message
+                    String[] parts = content.split(delimiter, 4);
+                    if (parts.length == 4) {
+                        String fileName = parts[2];
+                        String FileSize = parts[3];
+                        handleIncomingPhoto(chatMessage.getSender(), fileName, Integer.parseInt(FileSize));
+                    }
+                } else if (content != null && content.startsWith("VIDEO:")) {
+                    // Handle video message
+                    String[] parts = content.split(":", 4);
+                    if (parts.length == 4) {
+                        String fileName = parts[2];
+                        String base64Video = parts[3];
+                        handleIncomingVideo(chatMessage.getSender(), fileName, base64Video);
+                    }
+                } else if (content != null && content.startsWith("FILE:")) {
+                    // Handle file message
+                    String[] parts = content.split(":", 5);
+                    if (parts.length == 5) {
+                        String fileName = parts[2];
+                        String fileType = parts[3];
+                        String base64File = parts[4];
+                        handleIncomingFile(chatMessage.getSender(), fileName, fileType, base64File);
+                    }
+                } else {
+                    // Handle text message
+                    addMessage(chatMessage.getMessage(), chatMessage.getSender().equals(username));
+                }
+            }
+            
+            // Scroll to bottom after loading messages
+            scrollToBottom();
+        });
     }
 
     /**
@@ -359,107 +632,285 @@ public class ChatController extends Application implements Initializable {
     private void connectToServer() {
         try {
             socket = new Socket(SERVER_ADDRESS, PORT);
-            in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
-            out = new PrintWriter(socket.getOutputStream(), true);
+            dataIn = new DataInputStream(new BufferedInputStream(socket.getInputStream()));
+            dataOut = new DataOutputStream(new BufferedOutputStream(socket.getOutputStream()));
 
             // Send username to server
-            out.println(username);
-            // Request friend list
-            out.println("/listFriends");
+            dataOut.writeUTF(username);
+            dataOut.flush();
 
-            // Listen for incoming messages
-            String message;
-            while ((message = in.readLine()) != null) {
-                final String msg = message;
-                Platform.runLater(() -> processIncomingMessage(msg));
-            }
+            // Start listening for messages
+            startListening();
         } catch (IOException e) {
             Platform.runLater(() -> addMessage("Unable to connect to server.", "left"));
             e.printStackTrace();
         }
     }
 
-    /**
-     * Processes messages from the server: friend list updates or chat messages.
-     */
-    private void processIncomingMessage(String message) {
-
-        if (message.startsWith("PHOTO:")) {
-            // Handle incoming photo
-            String[] parts = message.split(":", 3);
-            String fileName = parts[1];
-            int fileSize = Integer.parseInt(parts[2]);
+    private void startListening() {
+        threadPool.execute(() -> {
             try {
-                byte[] fileBytes = new byte[fileSize];
-                InputStream inputStream = socket.getInputStream();
-                inputStream.read(fileBytes, 0, fileSize);
+                while (!socket.isClosed()) {
+                    String type = dataIn.readUTF();
+                    String sender = dataIn.readUTF();
+                    String receiver = dataIn.readUTF();
+                    int length = dataIn.readInt();
 
-                // Display the photo in the chat
-                Platform.runLater(() -> displayPhoto(fileName, fileBytes));
-            } catch (Exception e) {
+                    byte[] data = new byte[length];
+                    dataIn.readFully(data);
+
+                    switch (type) {
+                        case "TEXT":
+                            String msg = new String(data, "UTF-8");
+                    Platform.runLater(() -> {
+                                if (currentRecipient != null && currentRecipient.equals(sender)) {
+                                    addMessage(msg, "left");
+                                }
+                            });
+                            break;
+
+                        case "IMAGE":
+                            Platform.runLater(() -> {
+                                try {
+                                    // Create temporary file for the photo
+                                    File tempFile = File.createTempFile("photo_", ".jpg");
+                                    Files.write(tempFile.toPath(), data);
+                                    
+                                    Image image = new Image(tempFile.toURI().toString());
+                                    displayPhoto(image, "left");
+            } catch (IOException e) {
                 e.printStackTrace();
             }
-        } else {
+                            });
+                            break;
 
-
-
-            System.out.println("Received: " + message);
-            if (message.startsWith("USERLIST:")) {
-                VboxLeftSide.getChildren().clear();
-                // Server is sending the friend list
-                String list = message.substring("USERLIST:".length());
-                if (!list.trim().isEmpty()) {
-                    // IMPORTANT: Clear the old friend list first
-                    vboxUserInfo.getChildren().clear();
-
-                    String[] friends = list.split(",");
-                    for (String friendData : friends) {
-                        String[] parts = friendData.split(":", 2);
-                        String friendUsername = parts[0].trim();
-                        String lastMessage    = (parts.length > 1) ? parts[1].trim() : "No messages yet";
-
-                        // Add friend to the UI
-                        addUserToLeftSide(friendUsername, lastMessage, "", "default_profile.png");
+                        case "VIDEO":
+                            // Handle video message
+                        break;
                     }
-                } else {
-                    System.out.println("No friends found.");
                 }
-            } else if (message.contains(": ")) {
-                // Format "sender: content"
-                String[] parts = message.split(": ", 2);
-                if (parts.length == 2) {
-                    String sender  = parts[0].trim();
-                    String content = parts[1].trim();
-
-                    // If the sender is me, align right; otherwise, left
-                    if (sender.equals(username) || sender.equals("You")) {
-                        addMessage(sender + ": " + content, "right");
-                    } else {
-                        addMessage(sender + ": " + content, "left");
-                    }
-                } else {
-                    addMessage(message, "left");
-                }
-            } else {
-                addMessage(message, "left");
+            } catch (IOException e) {
+                System.err.println("Connection closed or error occurred: " + e.getMessage());
             }
+        });
+    }
+
+    private void handleServerCommand(String command) {
+        if (command.startsWith("/listFriends")) {
+            // Handle friend list update
+            String[] friends = command.substring("/listFriends".length()).trim().split(",");
+            Platform.runLater(() -> {
+                VboxLeftSide.getChildren().clear();
+                for (String friend : friends) {
+                    if (!friend.trim().isEmpty()) {
+                        addUserToLeftSide(friend.trim(), "", "", "");
+                    }
+                }
+            });
+        } else if (command.startsWith("/userJoined")) {
+            // Handle new user joined
+            String newUser = command.substring("/userJoined".length()).trim();
+            Platform.runLater(() -> {
+                addUserToLeftSide(newUser, "", "", "");
+            });
+        } else if (command.startsWith("/userLeft")) {
+            // Handle user left
+            String leftUser = command.substring("/userLeft".length()).trim();
+            Platform.runLater(() -> {
+                // Remove user from left side
+                for (javafx.scene.Node node : VboxLeftSide.getChildren()) {
+                    if (node instanceof HBox) {
+                        HBox userBox = (HBox) node;
+                        Label usernameLabel = (Label) ((VBox) userBox.getChildren().get(1)).getChildren().get(0);
+                        if (usernameLabel.getText().equals(leftUser)) {
+                            VboxLeftSide.getChildren().remove(userBox);
+                            break;
+                        }
+                    }
+                }
+            });
         }
     }
 
-
-    private void displayPhoto(String fileName, byte[] fileBytes) {
-        Image image = new Image(new ByteArrayInputStream(fileBytes));
-        ImageView imageView = new ImageView(image);
-        imageView.setFitWidth(200); // Adjust size as needed
-        imageView.setPreserveRatio(true);
-
-        // Add the image to the chat UI
-        HBox messageContainer = new HBox(imageView);
-        messageContainer.setAlignment(Pos.CENTER_LEFT); // Adjust alignment as needed
-        chatMessageContainer.getChildren().add(messageContainer);
+    private void handleIncomingVideo(String sender, String fileName, String base64Video) {
+        try {
+            byte[] videoData = Base64.getDecoder().decode(base64Video);
+            
+            // Create temporary file for the video
+            File tempFile = File.createTempFile("video_", fileName);
+            Files.write(tempFile.toPath(), videoData);
+            
+            Platform.runLater(() -> {
+                // Create and store video message
+                ChatMessage videoMessage = new ChatMessage(
+                    sender,
+                    username,
+                    "Video: " + fileName,
+                    "VIDEO:" + sender + ":" + fileName + ":" + base64Video,
+                    LocalDateTime.now(),
+                    "delivered"
+                );
+                
+                try (Connection conn = DatabaseConnection.getConnection()) {
+                    String sql = "INSERT INTO messages (sender_id, receiver_id, content, message, timestamp, status) VALUES (?, ?, ?, ?, ?, ?)";
+                    PreparedStatement stmt = conn.prepareStatement(sql);
+                    stmt.setInt(1, getUserIdByUsername(sender, conn));
+                    stmt.setInt(2, getUserIdByUsername(username, conn));
+                    stmt.setString(3, videoMessage.getContent());
+                    stmt.setString(4, videoMessage.getMessage());
+                    stmt.setObject(5, videoMessage.getTimestamp());
+                    stmt.setString(6, "delivered");
+                    stmt.executeUpdate();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+                
+                // Add video message to chat
+                addMessage("Video: " + fileName, false);
+            });
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
+    private void handleIncomingFile(String sender, String fileName, String fileType, String base64File) {
+        try {
+            byte[] fileData = Base64.getDecoder().decode(base64File);
+            
+            // Create temporary file
+            File tempFile = File.createTempFile("file_", fileName);
+            Files.write(tempFile.toPath(), fileData);
+            
+            Platform.runLater(() -> {
+                // Create and store file message
+                ChatMessage fileMessage = new ChatMessage(
+                    sender,
+                    username,
+                    "File: " + fileName,
+                    "FILE:" + sender + ":" + fileName + ":" + fileType + ":" + base64File,
+                    LocalDateTime.now(),
+                    "delivered"
+                );
+                
+                try (Connection conn = DatabaseConnection.getConnection()) {
+                    String sql = "INSERT INTO messages (sender_id, receiver_id, content, message, timestamp, status) VALUES (?, ?, ?, ?, ?, ?)";
+                    PreparedStatement stmt = conn.prepareStatement(sql);
+                    stmt.setInt(1, getUserIdByUsername(sender, conn));
+                    stmt.setInt(2, getUserIdByUsername(username, conn));
+                    stmt.setString(3, fileMessage.getContent());
+                    stmt.setString(4, fileMessage.getMessage());
+                    stmt.setObject(5, fileMessage.getTimestamp());
+                    stmt.setString(6, "delivered");
+                    stmt.executeUpdate();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+                
+                // Add file message to chat
+                addMessage("File: " + fileName, false);
+            });
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
 
+    private void displayPhoto(Image image, String alignment) {
+        Platform.runLater(() -> {
+            ImageView imageView = new ImageView(image);
+            imageView.setFitWidth(200);
+            imageView.setPreserveRatio(true);
+
+            HBox messageContainer = new HBox();
+            messageContainer.setPadding(new Insets(5));
+            messageContainer.setAlignment(alignment.equals("right") ? Pos.CENTER_RIGHT : Pos.CENTER_LEFT);
+
+            if ("right".equals(alignment)) {
+                VBox.setMargin(messageContainer, new Insets(10, 10, 10, 250));
+            } else {
+                VBox.setMargin(messageContainer, new Insets(10, 250, 10, 10));
+            }
+
+            messageContainer.getChildren().add(imageView);
+            vboxChat.getChildren().add(messageContainer);
+        });
+    }
+
+    private void displayVideoThumbnail(File videoFile, String alignment) {
+        Platform.runLater(() -> {
+            HBox messageContainer = new HBox();
+            messageContainer.setPadding(new Insets(5));
+            messageContainer.setAlignment(alignment.equals("right") ? Pos.CENTER_RIGHT : Pos.CENTER_LEFT);
+
+            Label videoLabel = new Label("📹 " + videoFile.getName());
+            videoLabel.setStyle("-fx-background-color: #131313; -fx-background-radius: 50; -fx-text-fill: white;");
+            videoLabel.setPadding(new Insets(10));
+
+            if ("right".equals(alignment)) {
+                VBox.setMargin(messageContainer, new Insets(10, 10, 10, 250));
+            } else {
+                VBox.setMargin(messageContainer, new Insets(10, 250, 10, 10));
+            }
+
+            messageContainer.getChildren().add(videoLabel);
+            vboxChat.getChildren().add(messageContainer);
+        });
+    }
+
+    private void displayFileInfo(File file, String alignment) {
+        Platform.runLater(() -> {
+            HBox messageContainer = new HBox();
+            messageContainer.setPadding(new Insets(5));
+            messageContainer.setAlignment(alignment.equals("right") ? Pos.CENTER_RIGHT : Pos.CENTER_LEFT);
+
+            Label fileLabel = new Label("📎 " + file.getName());
+            fileLabel.setStyle("-fx-background-color: #131313; -fx-background-radius: 50; -fx-text-fill: white;");
+            fileLabel.setPadding(new Insets(10));
+
+            if ("right".equals(alignment)) {
+                VBox.setMargin(messageContainer, new Insets(10, 10, 10, 250));
+            } else {
+                VBox.setMargin(messageContainer, new Insets(10, 250, 10, 10));
+            }
+
+            messageContainer.getChildren().add(fileLabel);
+            vboxChat.getChildren().add(messageContainer);
+        });
+    }
+
+    private void handleServerMessage(String message) {
+        String[] parts = message.split(":", 2);
+        if (parts.length == 2) {
+            String sender = parts[0];
+            String content = parts[1];
+            
+            // Create ChatMessage with all required fields
+            ChatMessage chatMessage = new ChatMessage(
+                sender,
+                username,
+                content,
+                content,
+                LocalDateTime.now(),
+                "delivered"
+            );
+            
+            addMessage(content, sender.equals(username));
+            
+            // Store message in database
+            try (Connection conn = DatabaseConnection.getConnection()) {
+                String sql = "INSERT INTO messages (sender_id, receiver_id, content, message, timestamp, status) VALUES (?, ?, ?, ?, ?, ?)";
+                PreparedStatement stmt = conn.prepareStatement(sql);
+                stmt.setInt(1, getUserIdByUsername(sender, conn));
+                stmt.setInt(2, getUserIdByUsername(username, conn));
+                stmt.setString(3, content);
+                stmt.setString(4, content);
+                stmt.setObject(5, chatMessage.getTimestamp());
+                stmt.setString(6, chatMessage.getStatus());
+                stmt.executeUpdate();
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+    }
 
     /**
      * Sends a message to the currentRecipient, saves it in the DB, and refreshes friend list.
@@ -467,23 +918,200 @@ public class ChatController extends Application implements Initializable {
     @FXML
     private void sendMessage() {
         String message = chat_text_send.getText().trim();
-        if (!message.isEmpty() && out != null && currentRecipient != null) {
-            // Send "recipient: message" to the server
-            out.println(currentRecipient + ": " + message);
-
-            // Show it in my own chat window
-            addMessage("You: " + message, "right");
-
-            // Also save to the DB for persistence
-            saveMessage(username, currentRecipient, message);
-
-            // Refresh the friend list so last message is updated
-            out.println("/listFriends");
-
-            chat_text_send.clear();
-        } else if (currentRecipient == null) {
-            addMessage("Select a user to chat with.", "left");
+        if (!message.isEmpty() && currentRecipient != null) {
+            try {
+                byte[] msgBytes = message.getBytes("UTF-8");
+                
+                dataOut.writeUTF("TEXT");
+                dataOut.writeUTF(username);
+                dataOut.writeUTF(currentRecipient);
+                dataOut.writeInt(msgBytes.length);
+                dataOut.write(msgBytes);
+                dataOut.flush();
+                
+                addMessage(message, "right");
+                chat_text_send.clear();
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
         }
+    }
+
+    @FXML
+    private void handleSendPhoto() {
+        if (currentRecipient == null) {
+            addMessage("Select a user to chat with.", false);
+            return;
+        }
+
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Select Photo");
+        fileChooser.getExtensionFilters().addAll(
+            new FileChooser.ExtensionFilter("Image Files", "*.png", "*.jpg", "*.jpeg", "*.gif")
+        );
+
+        File selectedFile = fileChooser.showOpenDialog(chat_text_send.getScene().getWindow());
+        if (selectedFile != null) {
+            try {
+                // Check file size (10MB limit for photos)
+                if (selectedFile.length() > 10 * 1024 * 1024) {
+                    addMessage("Photo size exceeds 10MB limit.", false);
+                    return;
+                }
+
+                // Read file into byte array
+                byte[] fileContent = Files.readAllBytes(selectedFile.toPath());
+
+                // Send header first
+//                String header = "PHOTO:" + currentRecipient + ":" + selectedFile.getName() + ":" + fileContent.length + "\n";
+                String header = "PHOTO:" + currentRecipient + "::" + selectedFile.getName() + "::" + fileContent.length + "\n";
+
+                dataOut.writeUTF("IMAGE");
+                dataOut.writeUTF(username);
+                dataOut.writeUTF(currentRecipient);
+                dataOut.writeInt(header.length());
+                dataOut.write(header.getBytes("UTF-8"));
+                dataOut.writeInt(fileContent.length);
+                dataOut.write(fileContent);
+                dataOut.flush();
+
+                // Display photo in sender's chat
+                Image image = new Image(selectedFile.toURI().toString());
+                displayPhoto(image, "right");
+
+                // Store in database
+                try (Connection conn = DatabaseConnection.getConnection()) {
+                    String sql = "INSERT INTO messages (sender_id, receiver_id, content, created_at, status) VALUES (?, ?, ?, ?, ?)";
+                    PreparedStatement stmt = conn.prepareStatement(sql);
+                    stmt.setInt(1, getUserIdByUsername(username, conn));
+                    stmt.setInt(2, getUserIdByUsername(currentRecipient, conn));
+                    stmt.setString(3, "Photo: " + selectedFile.getName());
+                    stmt.setObject(4, LocalDateTime.now());
+                    stmt.setString(5, "delivered");
+                    stmt.executeUpdate();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+                addMessage("Error sending photo", false);
+            }
+        }
+    }
+
+    @FXML
+    private void handleSendVideo() {
+        if (currentRecipient == null) {
+            showAlert("Error", "Please select a recipient first");
+            return;
+        }
+
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Select a Video");
+        fileChooser.getExtensionFilters().addAll(
+            new FileChooser.ExtensionFilter("Video Files", "*.mp4", "*.avi", "*.mov", "*.wmv")
+        );
+        File selectedFile = fileChooser.showOpenDialog(new Stage());
+        if (selectedFile != null) {
+            try {
+                // Check file size (max 100MB)
+                if (selectedFile.length() > 100 * 1024 * 1024) {
+                    showAlert("Error", "Video size exceeds 100MB limit");
+                    return;
+                }
+
+                byte[] fileBytes = Files.readAllBytes(selectedFile.toPath());
+                String base64Video = Base64.getEncoder().encodeToString(fileBytes);
+                
+                // Send video with new format: VIDEO:recipient:filename:base64data
+                dataOut.writeUTF("VIDEO");
+                dataOut.writeUTF(currentRecipient);
+                dataOut.writeUTF(selectedFile.getName());
+                dataOut.writeUTF(base64Video);
+                dataOut.flush();
+                
+                // Display video thumbnail
+                displayVideoThumbnail(selectedFile, "right");
+            } catch (IOException e) {
+                showAlert("Error", "Failed to send video: " + e.getMessage());
+                e.printStackTrace();
+            }
+        }
+    }
+
+    @FXML
+    private void handleSendFile() {
+        if (currentRecipient == null) {
+            showAlert("Error", "Please select a recipient first");
+            return;
+        }
+
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Select a File");
+        fileChooser.getExtensionFilters().addAll(
+            new FileChooser.ExtensionFilter("All Files", "*.*"),
+            new FileChooser.ExtensionFilter("Documents", "*.pdf", "*.doc", "*.docx", "*.txt"),
+            new FileChooser.ExtensionFilter("Archives", "*.zip", "*.rar"),
+            new FileChooser.ExtensionFilter("Spreadsheets", "*.xls", "*.xlsx"),
+            new FileChooser.ExtensionFilter("Presentations", "*.ppt", "*.pptx")
+        );
+        File selectedFile = fileChooser.showOpenDialog(new Stage());
+        if (selectedFile != null) {
+            try {
+                // Check file size (max 50MB)
+                if (selectedFile.length() > 50 * 1024 * 1024) {
+                    showAlert("Error", "File size exceeds 50MB limit");
+                    return;
+                }
+
+                // Get file extension
+                String fileType = getFileExtension(selectedFile.getName());
+                if (!isValidFileType(fileType)) {
+                    showAlert("Error", "Invalid file type. Allowed types: pdf, doc, docx, txt, zip, rar, xls, xlsx, ppt, pptx");
+                    return;
+                }
+
+                byte[] fileBytes = Files.readAllBytes(selectedFile.toPath());
+                String base64File = Base64.getEncoder().encodeToString(fileBytes);
+                
+                // Send file with new format: FILE:recipient:filename:filetype:base64data
+                dataOut.writeUTF("FILE");
+                dataOut.writeUTF(currentRecipient);
+                dataOut.writeUTF(selectedFile.getName());
+                dataOut.writeUTF(fileType);
+                dataOut.writeUTF(base64File);
+                dataOut.flush();
+                
+                // Display file info
+                displayFileInfo(selectedFile, "right");
+            } catch (IOException e) {
+                showAlert("Error", "Failed to send file: " + e.getMessage());
+                e.printStackTrace();
+            }
+        }
+    }
+
+    private String getFileExtension(String fileName) {
+        int lastDotIndex = fileName.lastIndexOf('.');
+        if (lastDotIndex > 0) {
+            return fileName.substring(lastDotIndex + 1).toLowerCase();
+        }
+        return "";
+    }
+
+    private boolean isValidFileType(String fileType) {
+        String[] allowedTypes = {"pdf", "doc", "docx", "txt", "zip", "rar", "xls", "xlsx", "ppt", "pptx"};
+        return Arrays.asList(allowedTypes).contains(fileType.toLowerCase());
+    }
+
+    private void showAlert(String title, String content) {
+        Platform.runLater(() -> {
+            Alert alert = new Alert(Alert.AlertType.ERROR);
+            alert.setTitle(title);
+            alert.setHeaderText(null);
+            alert.setContentText(content);
+            alert.showAndWait();
+        });
     }
 
     /**
@@ -627,113 +1255,183 @@ public class ChatController extends Application implements Initializable {
     /**
      * Adds a friend entry (username + last message) to the left sidebar.
      */
-    private void addUserToLeftSide(String username, String lastMessage, String time, String imagePath) {
-        // Create the HBox for the friend entry
-        HBox userHBox = new HBox();
-        userHBox.setAlignment(Pos.CENTER_LEFT);
-        userHBox.setPrefHeight(96);
-        userHBox.setPrefWidth(314);
-        userHBox.setStyle("-fx-background-color: #000; -fx-padding: 10; -fx-background-radius: 10;");
+    private void addUserToLeftSide( String username, String lastMessage, String time, String imagePath) {
+//        Platform.runLater(() -> {
+//            // Create the HBox for the friend entry
+//            HBox userHBox = new HBox();
+//            userHBox.setAlignment(Pos.CENTER_LEFT);
+//            userHBox.setPrefHeight(96);
+//            userHBox.setPrefWidth(314);
+//            userHBox.setStyle("-fx-background-color: #000; -fx-padding: 10; -fx-background-radius: 10;");
+//            userHBox.setSpacing(10);
+//
+//            // Profile image
+//            ImageView profileImage = new ImageView();
+//            profileImage.setFitWidth(52);
+//            profileImage.setFitHeight(60);
+//            try {
+//                // Try to load user's profile image, fallback to default if not found
+//                Image image = new Image(getClass().getResourceAsStream("/program/chatus/images/default_profile.png"));
+//                profileImage.setImage(image);
+//            } catch (Exception e) {
+//                // If default image not found, create a colored circle with initials
+//                profileImage.setImage(createDefaultProfileImage(username));
+//            }
+//            HBox.setMargin(profileImage, new Insets(0, 10, 0, 10));
+//
+//            // Create VBox for username + last message
+//            VBox vboxUserInfo = new VBox(5); // 5 pixels spacing
+//            vboxUserInfo.setAlignment(Pos.CENTER_LEFT);
+//            vboxUserInfo.setPrefHeight(76);
+//            vboxUserInfo.setPrefWidth(190);
+//
+//            Label nameLabel = new Label(username);
+//            nameLabel.setStyle("-fx-font-size: 14px; -fx-font-weight: bold; -fx-text-fill: #fcfcfc;");
+//
+//            Label messageLabel = new Label(lastMessage != null ? lastMessage : "");
+//            messageLabel.setStyle("-fx-font-size: 12px; -fx-text-fill: #dcdcdc;");
+//            messageLabel.setWrapText(true);
+//            messageLabel.setMaxWidth(190);
+//
+//            vboxUserInfo.getChildren().addAll(nameLabel, messageLabel);
+//
+//            // Time label on the right
+//            VBox vboxTimeLastChat = new VBox();
+//            vboxTimeLastChat.setAlignment(Pos.TOP_CENTER);
+//            Label timeLabel = new Label(time);
+//            timeLabel.setStyle("-fx-font-size: 12px; -fx-font-weight: bold; -fx-text-fill: white;");
+//            vboxTimeLastChat.getChildren().add(timeLabel);
+//
+//            // Add all sub-nodes to userHBox
+//            userHBox.getChildren().addAll(profileImage, vboxUserInfo, vboxTimeLastChat);
+//
+//            // Add click handler to load chat
+//            userHBox.setOnMouseClicked(event -> {
+//                currentRecipient = username;
+//                chat_name.setText(username);
+//                loadChatMessages(username);
+//            });
+//
+//            // Add hover effect
+//            userHBox.setOnMouseEntered(e -> userHBox.setStyle("-fx-background-color: #1a1a1a; -fx-padding: 10; -fx-background-radius: 10;"));
+//            userHBox.setOnMouseExited(e -> userHBox.setStyle("-fx-background-color: #000; -fx-padding: 10; -fx-background-radius: 10;"));
+//
+//            // Add to the left side
+//            VboxLeftSide.getChildren().add(userHBox);
+//        });
 
-        // Profile image
-        ImageView profileImage = new ImageView();
-        profileImage.setFitWidth(52);
-        profileImage.setFitHeight(60);
-        // (Load your image or placeholder)
-        // Example:
-        // try {
-        //     Image image = new Image(getClass().getResourceAsStream("/" + imagePath));
-        //     profileImage.setImage(image);
-        // } catch (Exception e) {
-        //     profileImage.setImage(new Image("https://via.placeholder.com/52x60"));
-        // }
-        HBox.setMargin(profileImage, new Insets(0, 10, 0, 10));
+        try{
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("CardUser.fxml"));
+            HBox card = loader.load();
 
-        // Create VBox for username + last message
-        VBox vboxUserInfo = new VBox();
-        vboxUserInfo.setAlignment(Pos.CENTER_LEFT);
-        vboxUserInfo.setPrefHeight(76);
-        vboxUserInfo.setPrefWidth(190);
+            CardUser controller = loader.getController();
+            controller.setUserData(username, lastMessage, time, imagePath);
+            System.out.println("the userfriend is "+username);
+            userControllerMap.put(username, controller);
+            card.setOnMouseClicked(event -> {
+                if (event.getButton() == MouseButton.PRIMARY) {
+                    loadChatMessages( username); // Left click
+                } else if (event.getButton() == MouseButton.SECONDARY) {
+                    showProfilePopup(event.getScreenX(), event.getScreenY(), username,card);
 
-        Label nameLabel = new Label(username);
-        nameLabel.setStyle("-fx-font-size: 14px; -fx-font-weight: bold; -fx-text-fill: #fcfcfc;");
+                    // Add to VBox container
 
-        Label messageLabel = new Label(lastMessage);
-        messageLabel.setStyle("-fx-font-size: 12px; -fx-text-fill: #dcdcdc;");
+                }
 
-        vboxUserInfo.getChildren().addAll(nameLabel, messageLabel);
+            });
+            VboxLeftSide.getChildren().add(card);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
 
-        // (Optional) Time label on the right
-        VBox vboxTimeLastChat = new VBox();
-        vboxTimeLastChat.setAlignment(Pos.TOP_CENTER);
-        Label timeLabel = new Label(time);
-        timeLabel.setStyle("-fx-font-size: 12px; -fx-font-weight: bold; -fx-text-fill: white;");
-        vboxTimeLastChat.getChildren().add(timeLabel);
 
-        // Add all sub-nodes to userHBox
-        userHBox.getChildren().addAll(profileImage, vboxUserInfo, vboxTimeLastChat);
+    }
+    private Popup profilePopup;
+    private void showProfilePopup(double x, double y, String username, HBox card) {
+        if (card.getScene() == null) {
+            Platform.runLater(() -> showProfilePopup(x, y, username, card));
+            return;
+        }
+        Window window = card.getScene().getWindow();
+        if (window == null) {
+            System.err.println("❌ Card's window is null!");
+            return;
+        }
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/program/chatus/ProfilePageController.fxml"));
+            VBox profileContent = loader.load();
+            ProfilePageController controller = loader.getController();
+            controller.setTargetCard(card);
 
-        // **Finally**, add userHBox to the container you use for the friend list.
-        // If your friend list is in VboxLeftSide, do this:
-        VboxLeftSide.getChildren().add(userHBox);
+            // Optional: apply a drop shadow if not already in FXML
+            profileContent.setEffect(new DropShadow());
 
-        // Or if you decided to use vboxUserInfo for the entire friend list,
-        // you would do: vboxUserInfo.getChildren().add(userHBox);
-        // Just be consistent with whichever container you cleared.
+            profilePopup = new Popup();
+            profilePopup.getContent().add(profileContent);
+            profilePopup.setAutoHide(true);
+            profilePopup.show(window, x, y);
 
-        // (Optional) Set a click event to load chat:
-        userHBox.setOnMouseClicked(event -> loadChatMessages(username));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 
-
-    /**
-     * Loads conversation history with the selected friend.
-     */
-    private void loadChatMessages(String friendUsername) {
-        currentRecipient = friendUsername;
-        Platform.runLater(() -> {
-            vboxChat.getChildren().clear();
-            List<ChatMessage> messages;
-            try {
-                messages = getMessagesForUser(friendUsername);
-            } catch (SQLException e) {
-                throw new RuntimeException(e);
-            }
-            if (messages == null || messages.isEmpty()) {
-                System.out.println("No messages found for: " + friendUsername);
-                return;
-            }
-
-            for (ChatMessage chatMessage : messages) {
-                Label chatLabel = new Label(chatMessage.getMessage());
-                chatLabel.setFont(Font.font("System Bold", 16));
-                chatLabel.setMaxWidth(338);
-                chatLabel.setPrefHeight(44);
-                chatLabel.setPadding(new Insets(10));
-
-                // If the message's sender is the friend, show on left; if me, on right
-                if (chatMessage.getSender().equals(friendUsername)) {
-                    chatLabel.setStyle("-fx-background-color: #2bc723; -fx-background-radius: 50; -fx-text-fill: white;");
-                    VBox.setMargin(chatLabel, new Insets(10, 250, 10, 10));
-                } else {
-                    chatLabel.setStyle("-fx-background-color: #131313; -fx-background-radius: 50; -fx-text-fill: white;");
-                    VBox.setMargin(chatLabel, new Insets(10, 10, 10, 250));
+    private Image createDefaultProfileImage(String username) {
+        // Create a colored circle with user's initials
+        int size = 52;
+        WritableImage image = new WritableImage(size, size);
+        PixelWriter writer = image.getPixelWriter();
+        
+        // Generate a color based on username
+        int color = username.hashCode();
+        Color backgroundColor = Color.rgb(
+            (color & 0xFF0000) >> 16,
+            (color & 0x00FF00) >> 8,
+            color & 0x0000FF
+        );
+        
+        // Fill circle
+        for (int x = 0; x < size; x++) {
+            for (int y = 0; y < size; y++) {
+                double dx = x - size/2;
+                double dy = y - size/2;
+                if (dx*dx + dy*dy <= (size/2)*(size/2)) {
+                    writer.setColor(x, y, backgroundColor);
                 }
-                vboxChat.getChildren().add(chatLabel);
             }
-        });
+        }
+        
+        return image;
     }
 
     /**
      * Gets the user_id for a username from the DB.
      */
     private int getUserIdByUsername(String username, Connection connection) throws SQLException {
+        if (username == null || username.trim().isEmpty()) {
+            System.err.println("Error: Username is null or empty");
+            return -1;
+        }
+
         String sql = "SELECT user_id FROM users WHERE username = ?";
         try (PreparedStatement statement = connection.prepareStatement(sql)) {
-            statement.setString(1, username);
+            statement.setString(1, username.trim());
             try (ResultSet rs = statement.executeQuery()) {
                 if (rs.next()) {
                     return rs.getInt("user_id");
+                } else {
+                    System.err.println("Error: User not found in database: " + username);
+                    // Insert the user if they don't exist
+                    String insertSql = "INSERT INTO users (username, created_at) VALUES (?, NOW())";
+                    try (PreparedStatement insertStmt = connection.prepareStatement(insertSql, Statement.RETURN_GENERATED_KEYS)) {
+                        insertStmt.setString(1, username.trim());
+                        insertStmt.executeUpdate();
+                        try (ResultSet generatedKeys = insertStmt.getGeneratedKeys()) {
+                            if (generatedKeys.next()) {
+                                return generatedKeys.getInt(1);
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -770,12 +1468,81 @@ public class ChatController extends Application implements Initializable {
                     while (rs.next()) {
                         String senderUsername = rs.getString("username");
                         String content        = rs.getString("content");
-                        messages.add(new ChatMessage(senderUsername, content));
+                        messages.add(new ChatMessage(senderUsername, friendUsername, content, content, LocalDateTime.now(), "delivered"));
                     }
                 }
             }
         }
         return messages;
+    }
+
+    private void loadFriendList() {
+        try (Connection conn = DatabaseConnection.getConnection()) {
+            // Get current user's ID
+            int currentUserId = getUserIdByUsername(username, conn);
+            if (currentUserId == -1) {
+                System.err.println("Current user not found in database");
+                return;
+            }
+
+            // Query to get all users except current user
+            String sql = "SELECT u.user_id, u.username, " +
+                        "(SELECT m.content FROM messages m " +
+                        "WHERE (m.sender_id = u.user_id AND m.receiver_id = ?) " +
+                        "OR (m.sender_id = ? AND m.receiver_id = u.user_id) " +
+                        "ORDER BY m.created_at DESC LIMIT 1) as last_message, " +
+                        "(SELECT m.created_at FROM messages m " +
+                        "WHERE (m.sender_id = u.user_id AND m.receiver_id = ?) " +
+                        "OR (m.sender_id = ? AND m.receiver_id = u.user_id) " +
+                        "ORDER BY m.created_at DESC LIMIT 1) as last_message_time " +
+                        "FROM users u " +
+                        "WHERE u.user_id != ? " +
+                        "ORDER BY CASE WHEN last_message_time IS NULL THEN 1 ELSE 0 END, last_message_time DESC";
+
+            try (PreparedStatement stmt = conn.prepareStatement(sql)) {
+                stmt.setInt(1, currentUserId);
+                stmt.setInt(2, currentUserId);
+                stmt.setInt(3, currentUserId);
+                stmt.setInt(4, currentUserId);
+                stmt.setInt(5, currentUserId);
+
+                try (ResultSet rs = stmt.executeQuery()) {
+                    // Create a list to store the results
+                    List<Map<String, Object>> results = new ArrayList<>();
+                    while (rs.next()) {
+                        Map<String, Object> row = new HashMap<>();
+                        row.put("username", rs.getString("username"));
+                        row.put("last_message", rs.getString("last_message"));
+                        row.put("last_message_time", rs.getTimestamp("last_message_time"));
+                        results.add(row);
+                    }
+
+                    // Update UI with the results
+                    Platform.runLater(() -> {
+                        VboxLeftSide.getChildren().clear();
+                        for (Map<String, Object> row : results) {
+                            String friendUsername = (String) row.get("username");
+                            String lastMessage = (String) row.get("last_message");
+                            Timestamp lastMessageTime = (Timestamp) row.get("last_message_time");
+                            
+                            // Format the time
+                            String timeStr = "";
+                            if (lastMessageTime != null) {
+                                timeStr = lastMessageTime.toLocalDateTime().format(
+                                    java.time.format.DateTimeFormatter.ofPattern("HH:mm")
+                                );
+                            }
+
+                            // Add user to the left side
+                            addUserToLeftSide(friendUsername, lastMessage, timeStr, "");
+                        }
+                    });
+                }
+            }
+        } catch (SQLException e) {
+            System.err.println("Error loading friend list: " + e.getMessage());
+            e.printStackTrace();
+        }
     }
 
     // Standard JavaFX application entry point
@@ -791,5 +1558,9 @@ public class ChatController extends Application implements Initializable {
         primaryStage.setWidth(400);
         primaryStage.setWidth(500);
         primaryStage.show();
+    }
+
+
+    public void sendMessageAi(ActionEvent event) {
     }
 }
